Actions
Bug #1355
closedbeadm produce a core dump while listing snapshots with -H option
Start date:
2011-08-09
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
needs-triage
Gerrit CR:
Description
root@indy:~# beadm list -s nightly2 BE/Snapshot Space Policy Created nightly2 nightly2@test 0 static 2011-08-09 20:17 root@indy:~# beadm list -a nightly2 BE/Dataset/Snapshot Active Mountpoint Space Policy Created nightly2 rpool/ROOT/nightly2 - - 806 static 2011-06-11 15:09 rpool/ROOT/nightly2@test - - 0 static 2011-08-09 20:17 root@indy:~# beadm list -dH nightly2 nightly2;rpool/ROOT/nightly2;;;845128192;static;1307790559
But:
root@indy:~# beadm list -sH nightly2 Segmentation Fault (core dumped) root@indy:~# beadm list -aH nightly2 nightly2;rpool/ROOT/nightly2;;;845128192;static;1307790559 Segmentation Fault (core dumped)
Updated by Alexander Eremin about 11 years ago
- Status changed from New to In Progress
- Assignee set to Alexander Eremin
- % Done changed from 0 to 20
Updated by Albert Lee almost 11 years ago
- Status changed from In Progress to Resolved
Fixed in:
changeset: 13439:da58f9d4ef03
tag: tip
user: Alexander Eremin <a.eremin@nexenta.com>
date: Mon Aug 22 11:37:10 2011 -0400
files: usr/src/cmd/beadm/beadm.c usr/src/man/man1m/beadm.1m
description:
1355 beadm produce a core dump while listing snapshots with -H option
1353 beadm rollback undocumented in man page
Reviewed by: Igor Kozhukhov <igor.kozhukhov@nexenta.com>
Reviewed by: Garrett D'Amore <garrett@nexenta.com>
Reviewed by: Eric Schrock <eric.schrock@delphix.com>
Approved by: Albert Lee <trisk@nexenta.com>
Actions