1355 beadm produce a core dump while listing snapshots with -H option 1353 beadm rollback undocumented in man page Reviewed by: Igor Kozhukhov <igor.kozhukhov@nexenta.com> Reviewed by: Garrett D'Amore <garrett@nexenta.com> Reviewed by: Eric Schrock <eric.schrock@delphix.com> Approved by: Albert Lee <trisk@nexenta.com>